# MiniGit

./: .gitignore  .history  CMakeLists.txt  Makefile  README.md
include/branching/: Branch.hpp  BranchDatabase.hpp  DefaultBranchFactory.hpp  IBranchFactory.hpp
include/cli/: CLI.hpp  GitManager.hpp
include/command/: ICommand.hpp
include/core/: File.hpp  Folder.hpp  IFileSystemItem.hpp
include/diff/: DiffStrategy.hpp  DiffStrategyFactory.hpp  DiffStrategyType.hpp
include/observer/: HistoryFileObserver.hpp  IObserver.hpp  NotificationService.hpp
include/repository/: Commit.hpp  CommitBuilder.hpp  CommitHistory.hpp  Repository.hpp
src/: main.cpp
src/branching/: Branch.cpp  BranchDatabase.cpp
src/cli/: CLI.cpp  GitManager.cpp
src/command/: command.cpp
src/core/: File.cpp  Folder.cpp
src/diff/: DiffStrategy.cpp  DiffStrategyFactory.cpp
src/observer/: HistoryFileObserver.cpp  NotificationService.cpp
src/repository/: Commit.cpp  CommitHistory.cpp  Repository.cpp
tests/: GitManagerObserverTests.cpp
